<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Services</string>
    <string name="button_name">Next</string>
    <string-array name="choose_role">
        <item>Choose your role</item>
        <item>I\'m doing services</item>
        <item>I\'m looking for a service</item>
    </string-array>
    <string name="registration">Don’t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat</string>
    <string name="phone_number">Phone \n number</string>
    <string name="button_submit">submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_bio">SHORT BIO</string>
    <string name="profile_experience">JOB \n EXPERIENCE</string>
    <string name="profile_country">COUNTRY</string>
    <string name="profile_skills">TECH SKILLS</string>
    <string name="profile_contacts">CONTACTS</string>
    <string name="profile_links">LINKS</string>
    <string name="profile_button_edit">Edit</string>
    <string name="set1">Notifications and sound</string>
    <string name="set2">Theme</string>
    <string name="set3">Confidentiality</string>
    <string name="set4">Password settings</string>
    <string name="set5">Language</string>
    <string name="set6">Support</string>
    <string name="q">Биография включает в себя не только основные факты (Биографический факт) жизни, такие как рождение, происхождение, образование, служба, работа, семейные отношения и смерть;</string>
    <string name="w">Биографические произведения обычно не являются художественной литературой, но художественная литература также может использоваться для изображения жизни человека.</string>
</resources>