<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/setting1">


        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:backgroundTint="@color/setting1"
            android:src="@drawable/icon_close"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="25dp"/>
        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="80dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_notification"
                android:background="@color/setting1"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="5dp"/>

            <Button
                style="@style/setting1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="100dp"
                android:text="@string/set1" />
        </FrameLayout>

        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_moon"
                android:background="@color/setting1"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/set2"
                android:layout_marginLeft="100dp"
                style="@style/setting1"/>
        </FrameLayout>

        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="45dp"
                android:src="@drawable/confid_icon"
                android:background="@color/setting1"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="2dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/set3"
                android:layout_marginLeft="100dp"
                style="@style/setting1"/>
        </FrameLayout>
        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_key"
                android:background="@color/setting1"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/set4"
                android:layout_marginLeft="100dp"
                style="@style/setting1"/>
        </FrameLayout>

        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/icon_language"
                android:background="@color/setting1"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/set5"
                android:layout_marginLeft="100dp"
                style="@style/setting1"/>
        </FrameLayout>

        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_support"
                android:background="@color/setting1"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="3dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/set6"
                android:layout_marginLeft="100dp"
                style="@style/setting1" />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>