<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/main_backround"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="30dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/changa_one"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/changa_one"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:fontFamily="@font/changa_one"
        android:inputType="textPassword"
        android:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <EditText
        android:id="@+id/password_valid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:fontFamily="@font/changa_one"
        android:inputType="textPassword"
        android:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />
    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:fontFamily="@font/changa_one"
        android:inputType="textPassword"
        android:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_valid" />

    <!--<DatePicker
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date" />-->

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="178dp"
        android:fontFamily="@font/be_vietnam_light"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/login"
        android:layout_marginTop="53dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/be_vietnam_light"
        android:textColor="@color/white"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/password"
        android:layout_marginTop="53dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/be_vietnam_light"
        android:textColor="@color/white"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/repeatPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password"
        app:layout_constraintTop_toBottomOf="@id/pass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/password_valid"
        android:layout_marginTop="53dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/be_vietnam_light"
        android:textColor="@color/white"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birthday"
        app:layout_constraintTop_toBottomOf="@id/repeatPass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/date"
        android:layout_marginTop="37dp"
        android:textAlignment="center"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/be_vietnam_light"
        android:textColor="@color/white"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/be_vietnam_light"
        android:text="@string/button_submit"
        android:textAlignment="center"
        android:textSize="17sp"
        android:bottomLeftRadius="35dp"
        android:bottomRightRadius="35dp"
        android:topLeftRadius="35dp"
        android:topRightRadius="35dp"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_avatar"
        app:srcCompat="@drawable/icon_avatar"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="37dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="34dp"
        android:scaleType="centerCrop"/>

</androidx.constraintlayout.widget.ConstraintLayout>