<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/main_backround"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="24dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/changa_one"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="24dp"
        android:ems="10"
        android:fontFamily="@font/changa_one"
        android:inputType="textPassword"
        android:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="179dp"
        android:layout_height="41dp"
        android:textAlignment="center"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="24dp"
        android:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:background="@android:color/transparent"/>
    <Button
        android:id="@+id/nextButton"
        android:layout_width="99dp"
        android:layout_height="49dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/be_vietnam_light"
        android:text="@string/button_name"
        android:textAlignment="center"
        android:textSize="17sp"
        android:bottomLeftRadius="35dp"
        android:bottomRightRadius="35dp"
        android:topLeftRadius="35dp"
        android:topRightRadius="35dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nextButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="75dp"
        android:text="@string/registration"
        android:fontFamily="@font/be_vietnam_light"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="613dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/signup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="13dp"
        android:fontFamily="@font/be_vietnam_light"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="212dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/login"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_login" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="288dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_password" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="364dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_choose" />


</androidx.constraintlayout.widget.ConstraintLayout>